fix(data-list): added variation to avoid shift when item is dragged over (#3574)

--- a/src/patternfly/components/DataList/data-list.scss
+++ b/src/patternfly/components/DataList/data-list.scss
@@ -166,6 +166,10 @@
       font-size: var(--pf-c-data-list--m-compact__check--FontSize);
     }
   }
+
+  &.pf-m-drag-over {
+    overflow-anchor: none;
+  }
 }
 
 .pf-c-data-list,
